--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,7 @@ psutil
 aiohttp>=2.2.5
 Pillow>=4.2.0
 CurrencyConverter
-#googletrans
-google_trans_new
+googletrans
 jikanpy
 speedtest-cli
 coffeehouse==2.2.4
