--- a/requirements.txt
+++ b/requirements.txt
@@ -21,13 +21,14 @@ aiohttp>=2.2.5
 Pillow>=4.2.0
 CurrencyConverter
 #googletrans
-google_trans_new
+#google_trans_new
 jikanpy
 speedtest-cli
 coffeehouse==2.2.4
 regex
 bleach
 git+https://github.com/starry69/python-markdown2.git
+git+https://github.com/luisxgarcia/google_trans_new
 wikipedia
 telethon
 telegraph
